# PAI

./: .gitignore  README.md  build.bat  package-lock.json  package.json
.github/workflows/: windows-release.yml
docs/: updater-signing.md
docs/releases/: v0.0.1.md  v0.0.10.md  v0.0.11.md  v0.0.12.md  v0.0.13.md  v0.0.14.md  v0.0.15.md  v0.0.2.md  v0.0.3.md  v0.0.4.md  v0.0.5.md  v0.0.6.md  v0.0.7.md  v0.0.8.md  v0.0.9.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  App.vue  main.ts  main.tsx
frontend/src/composables/: useUpdater.tsx
frontend/src/layouts/: MainLayout.tsx  MainLayout.vue
frontend/src/router/: index.ts
frontend/src/styles/: global.css
frontend/src/views/: HomeView.tsx  HomeView.vue  SettingsView.tsx  SyncView.tsx  SyncView.vue
src-tauri/: Cargo.toml  pai-update-private.key.pub  pai-update-public.key  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  records.rs
src-tauri/src/git/: mod.rs
src-tauri/src/sync/: mod.rs
